[package]
name = "implant-v2"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.0"
litcrypt = "0.3.0"
os_info = "3.7.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
whoami = "1.4.1"
rust_syscalls = {path = "../rust_syscalls", features = ["_DIRECT_"] }
windows-sys = { version = "0.48.0", features = ["Win32_System_WindowsProgramming", "Win32_Foundation"] }
